Fix related publications stretched out on small screens

--- a/assets/scss/molecules/cards/_publication-card.scss
+++ b/assets/scss/molecules/cards/_publication-card.scss
@@ -35,11 +35,14 @@
 
             .publication-image {
                 height: 100%;
+                padding: 63px 30px;
 
                 .image {
                     height: 100%;
+                    display: flex;
                     min-width: 100%;
                     min-height: 100%;
+                    justify-content: center;
 
                     img {
                         height: 100%;
